apps/grafana-tools/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - port: 3000
      protocol: TCP
      name: http-grafana
  selector:
    app: grafana
  sessionAffinity: None
